--- a/ControleDeBar.WebApp/Views/Garcom/Index.cshtml
+++ b/ControleDeBar.WebApp/Views/Garcom/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewBag.Titulo = "Visualização de Garcom";
+	ViewBag.Titulo = "Visualização de Garçom";
 }
 
 @model VisualizarGarcomViewModel;
@@ -12,11 +12,11 @@
 <div class="row mt-4">
     @foreach (DetalhesGarcomViewModel g in Model.Registros)
     {
-        <div class="col-3">
+        <div class="col-2">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title"># @g.Nome</h5>
-                    <p class="card-text mb-0"><strong>CPF:</strong> @g.Cpf lugar(es)</p>
+                    <p class="card-text mt-3 mb-0"><strong>CPF:</strong> @g.Cpf</p>
                 </div>
 
                 <div class="card-actions ms-auto me-3 mb-3 d-flex gap-1">
