--- a/ControleDeBar.WebApp/Views/Garcom/Index.cshtml
+++ b/ControleDeBar.WebApp/Views/Garcom/Index.cshtml
@@ -20,10 +20,10 @@
                 </div>
 
                 <div class="card-actions ms-auto me-3 mb-3 d-flex gap-1">
-                    <a class="btn btn-sm btn-primary rounded-circle d-flex justify-content-center align-items-center" style="height: 35px; width: 35px;" href="/Garcon/Editar/@g.Id">
+                    <a class="btn btn-sm btn-primary rounded-circle d-flex justify-content-center align-items-center" style="height: 35px; width: 35px;" href="/Garcom/Editar/@g.Id">
                         <i class="bi bi-pencil"></i>
                     </a>
-                    <a class="btn btn-sm btn-danger rounded-circle d-flex justify-content-center align-items-center" style="height: 35px; width: 35px;" href="/Garcon/Excluir/@g.Id">
+                    <a class="btn btn-sm btn-danger rounded-circle d-flex justify-content-center align-items-center" style="height: 35px; width: 35px;" href="/Garcom/Excluir/@g.Id">
                         <i class="bi bi-trash2"></i>
                     </a>
                 </div>
