--- a/ControleDeBar.WebApp/Views/Conta/GerenciarPedidos.cshtml
+++ b/ControleDeBar.WebApp/Views/Conta/GerenciarPedidos.cshtml
@@ -5,8 +5,8 @@
 
 }
 
-<div class="row justify-content-center my-5">
-    <div class="col-md-8">
+<div class="row justify-content-center ">
+    <div class="col">
         <div class="card rounded-4 border-0">
             <div class="card-body p-md-5">
                 <h3>Gestão de Pedidos da Conta</h3>
