--- a/ControleDeBar.WebApp/Views/Mesa/Excluir.cshtml
+++ b/ControleDeBar.WebApp/Views/Mesa/Excluir.cshtml
@@ -5,7 +5,7 @@
 @model ExcluirMesaViewModel
 
 <div class="row justify-content-center">
-    <form class="col-6" asp-action="Excluir" method="post">
+    <form class="col-lg-8 col-xl-6" asp-action="Excluir" method="post">
 
         <p class="d-flex justify content-center"><strong>Deseja excluir a Mesa Nº @Model.Numero ?</strong></p>
 
