Implementada responsividade no módulo de contas e adicionada imagem na tela inicial

--- a/ControleDeBar.WebApp/Views/Home/Index.cshtml
+++ b/ControleDeBar.WebApp/Views/Home/Index.cshtml
@@ -2,13 +2,10 @@
     ViewBag.Titulo = "Página Inicial";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
 
-<div class="row justify-content-center mt-5">
-	<div class="col">
+
+<div class="row g-5 justify-content-center mt-3">
+	<div class="col order-1 order-lg-0">
 		<h2 class="text-primary fs-1 fw-bold">Seja bem-vindo/a!</h2>
 
 		<p class="fs-4 mt-3">
@@ -27,5 +24,8 @@
 			<a asp-controller="Produto" asp-action="Index" class="btn btn-outline-primary fw-semibold px-5 rounded-3">Produtos</a>
 			<a asp-controller="Conta" asp-action="Index" class="btn btn-outline-primary fw-semibold px-5 rounded-3">Contas</a>
 		</div>
+	</div>
+	<div class="col-lg-5 order-0 order-lg-1">
+		<img src="~/images/undraw_beer.svg" class="img-fluid" />
 	</div>
 </div>
